{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 12,
  "lineage": "283ecb9f-0326-7a87-e86d-6c17072f82ec",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:internet-gateway/igw-0a8ecd2be767eeaef",
            "id": "igw-0a8ecd2be767eeaef",
            "owner_id": "521146072361",
            "tags": {
              "Name": "terraform-aws-igw"
            },
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0581d59a9afdc0f60",
            "owner_id": "521146072361",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a8ecd2be767eeaef",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Terraform_Main_table-testing"
            },
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terravpc",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04eb63bfc65a2ad48",
            "route_table_id": "rtb-0581d59a9afdc0f60",
            "subnet_id": "subnet-02113c04e1b8c9e23"
          },
          "dependencies": [
            "aws_internet_gateway.terravpc",
            "aws_route_table.terraform-public",
            "aws_subnet.subnet1-public",
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:security-group/sg-06280e0e74e5679e4",
            "description": "Allow all inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06280e0e74e5679e4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_all",
            "name_prefix": "",
            "owner_id": "521146072361",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:subnet/subnet-02113c04e1b8c9e23",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.2.1.0/24",
            "id": "subnet-02113c04e1b8c9e23",
            "map_public_ip_on_launch": false,
            "owner_id": "521146072361",
            "tags": {
              "Name": "Terraform_Public_Subnet1-testing"
            },
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:subnet/subnet-048336992dc5d27bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.2.2.0/24",
            "id": "subnet-048336992dc5d27bb",
            "map_public_ip_on_launch": false,
            "owner_id": "521146072361",
            "tags": {
              "Name": "Terraform_Public_Subnet2-testing"
            },
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:subnet/subnet-04e9df4b9fc38eabb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.2.3.0/24",
            "id": "subnet-04e9df4b9fc38eabb",
            "map_public_ip_on_launch": false,
            "owner_id": "521146072361",
            "tags": {
              "Name": "Terraform_Public_Subnet3-testing"
            },
            "vpc_id": "vpc-04cf76c500ab62d77"
          },
          "dependencies": [
            "aws_vpc.terravpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terravpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:521146072361:vpc/vpc-04cf76c500ab62d77",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-0d7afc18dca60307f",
            "default_route_table_id": "rtb-0453904666d55a576",
            "default_security_group_id": "sg-035c8fc8868734861",
            "dhcp_options_id": "dopt-066439c7616be967d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04cf76c500ab62d77",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0453904666d55a576",
            "owner_id": "521146072361",
            "tags": {
              "Name": "terraform-aws-testing",
              "Owner": "Gowthami",
              "environment": "dev"
            }
          }
        }
      ]
    }
  ]
}